# analizador-de-directorios

./: CMakeLists.txt  main.cpp
datos/: archivo.hpp
graphics/: menu.hpp
negocio/: logica.hpp
